src/test/run-pass/type-ptr.rs
fn f(a: *int) -> *int { return a; }

fn g(a: *int) -> *int { let b = f(a); return b; }

fn main() { return; }
